--- a/package.json
+++ b/package.json
@@ -1,25 +1,31 @@
 {
-	"name": "add-to-cart",
+	"name": "webpack",
 	"version": "1.0.0",
 	"description": "",
 	"main": "index.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"dev": "webpack-dev-server --mode development --open",
-		"start": "webpack && node server.js"
+		"dev": "webpack --mode development",
+		"start": "webpack serve --open",
+		"build": "webpack --mode production"
 	},
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
 	"devDependencies": {
-		"@babel/cli": "^7.21.0",
 		"@babel/core": "^7.21.0",
 		"@babel/preset-env": "^7.20.2",
 		"babel-loader": "^9.1.2",
 		"css-loader": "^6.7.3",
 		"html-webpack-plugin": "^5.5.0",
+		"sass": "^1.58.3",
+		"sass-loader": "^13.2.0",
 		"style-loader": "^3.3.1",
+		"webpack": "^5.75.0",
 		"webpack-cli": "^5.0.1",
 		"webpack-dev-server": "^4.11.1"
+	},
+	"dependencies": {
+		"moment": "^2.29.4"
 	}
 }
