--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
 		"@babel/preset-env": "^7.20.2",
 		"babel-loader": "^9.1.2",
 		"css-loader": "^6.7.3",
+		"file-loader": "^6.2.0",
+		"html-loader": "^4.2.0",
 		"html-webpack-plugin": "^5.5.0",
 		"sass": "^1.58.3",
 		"sass-loader": "^13.2.0",
