--- a/package.json
+++ b/package.json
@@ -1,37 +1,46 @@
 {
-	"name": "webpack",
-	"version": "1.0.0",
-	"description": "",
-	"main": "index.js",
-	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1",
-		"dev": "webpack --mode development",
-		"start": "webpack serve --open",
-		"build": "webpack --mode production"
-	},
-	"keywords": [],
-	"author": "",
-	"license": "ISC",
-	"devDependencies": {
-		"@babel/core": "^7.21.0",
-		"@babel/preset-env": "^7.20.2",
-		"babel-loader": "^9.1.2",
-		"css-loader": "^6.7.3",
-		"dotenv-webpack": "^8.0.1",
-		"file-loader": "^6.2.0",
-		"html-loader": "^4.2.0",
-		"html-webpack-plugin": "^5.5.0",
-		"sass": "^1.58.3",
-		"sass-loader": "^13.2.0",
-		"style-loader": "^3.3.1",
-		"webpack": "^5.75.0",
-		"webpack-cli": "^5.0.1",
-		"webpack-dev-server": "^4.11.1"
-	},
-	"dependencies": {
-		"copy-webpack-plugin": "^11.0.0",
-		"dotenv": "^16.0.3",
-		"firebase": "^9.17.2",
-		"moment": "^2.29.4"
-	}
+  "name": "webpack",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "webpack --mode development",
+    "start": "webpack serve --open",
+    "build": "webpack --mode production",
+    "lint": "eslint src --ext .js",
+    "format": "prettier -w ."
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
+    "@babel/core": "^7.21.0",
+    "@babel/preset-env": "^7.20.2",
+    "babel-loader": "^9.1.2",
+    "css-loader": "^6.7.3",
+    "dotenv-webpack": "^8.0.1",
+    "eslint": "^8.37.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-webpack-plugin": "^2.7.0",
+    "file-loader": "^6.2.0",
+    "html-loader": "^4.2.0",
+    "html-webpack-plugin": "^5.5.0",
+    "prettier": "^2.8.7",
+    "sass": "^1.58.3",
+    "sass-loader": "^13.2.0",
+    "style-loader": "^3.3.1",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1",
+    "webpack-dev-server": "^4.11.1"
+  },
+  "dependencies": {
+    "copy-webpack-plugin": "^11.0.0",
+    "dotenv": "^16.0.3",
+    "firebase": "^9.17.2",
+    "moment": "^2.29.4"
+  }
 }
